# eventyay-interpretation-portal

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  PRODUCTION_REQUIREMENTS.md  README.md  agents.md  app.py  docker-compose.interpretation.yml  docker-compose.yml  docusaurus.config.ts  fastapi_app.py  fix_stuff.py  fix_tests_logic.py  mediamtx.yml  pyproject.toml  remove_emojis.py
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: bandit.yml  ci.yml  deploy.yml  docs.yml  tests.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  006_add_relay_booth_id_to_room.py  008_add_transcription_api_keys.py  009_add_elevenlabs_api_key.py
backend/: .env.example  manage.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/tests/: __init__.py  test_accounts.py  test_rooms.py
docs/: WHEP_TESTING.md  development.md  how-it-works.mdx  index.mdx  interpretation-audio-plan.md  introduction.mdx  mediamtx-config-reference.md  quickstart.mdx
docs-site/content/: how-it-works.mdx  (+2 more)
floor-bot/: bot.py
frontend/: index.html  package-lock.json  package.json
portal/: auth.py  booth_identity.py  booth_state.py  config.py  database.py  models.py  transcription.py
templates/: home.html  interpreter_booth.html  listener-event.html  listener-webrtc.html  listener.html  login.html
tests/: test_admin_panel.py  test_booth_identity.py  test_booth_state.py  test_database.py  test_database_e2e.py  test_fastapi_app.py  test_join_flow.py  test_memberships_tokens.py  test_roles.py  test_transcription_concurrency.py
(+125 files in other folders)
